--- a/superagentweb/src/main/res/layout/superagentweb_error_page.xml
+++ b/superagentweb/src/main/res/layout/superagentweb_error_page.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    >
+    android:orientation="vertical">
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/agentweb_default_page_error"
-        android:textSize="22sp"
         android:gravity="center"
+        android:text="@string/superagentweb_default_page_error"
         android:textColor="#696969"
-        />
+        android:textSize="22sp" />
 
 </LinearLayout>
